<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".ui.authentication.AuthenticationMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="110dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Eventer.Title" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_by_number_text_view"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_phone_number_button"
            style="@style/Widget.Eventer.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/login_by_phone_number_button" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:text="@string/login_by_social_text_view" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_by_google_button"
                style="@style/Widget.Eventer.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login_by_google"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_by_facebook_button"
                style="@style/Widget.Eventer.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_toRightOf="@id/login_by_google_button"
                android:text="@string/login_by_facebook" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
