<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main_content.add_event.AddEventLocationFragment">

    <TextView
        android:id="@+id/add_event_title_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/add_event_title_add"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/Divider"
        app:layout_constraintBottom_toBottomOf="@id/add_event_title_location"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/add_event_input_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_event_title_location">

        <TextView
            style="@style/TextBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event_place" />



        <FrameLayout
            android:id="@+id/add_event_location_maps_container"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_event_location_next_button"
        style="@style/Widget.Eventer.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="4dp"
        android:padding="20dp"
        android:text="@string/next_button"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>