<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.VerifyPhoneActivity"
    android:background="@color/colorPrimaryDark">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/enterCodeProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <androidx.cardview.widget.CardView
        style="@style/login_card_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="90">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_name_title"
                android:gravity="center"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/input_first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verify_code"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/textColorPrimary"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterCodeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterCodeSignInButton"
        style="@style/Widget.Eventer.Button"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="30dp"
        app:cornerRadius="30dp"
        android:text="@string/next_button"
        android:elevation="10dp"/>

</LinearLayout>